# wtfapp

./: .gitignore  AGENTS.md  LICENSE
.opencode/commands/: analyze.md  backlog.md  commit.md
.opencode/plans/: 2026-04-26-delete-account.md  overdue-tasks-block.md
.opencode/skill/brainstorming-skill/: SKILL.md
.opencode/skill/context-bridge/: SKILL.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 115a1b8f440a_initial.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
backend/app/models/: __init__.py  confirmation.py  enums.py  report.py  review.py  toilet.py  user.py
backend/app/routers/: auth.py  reports.py  reviews.py  toilets.py  users.py
backend/app/schemas/: auth.py  report.py  review.py  toilet.py
backend/app/services/: auth.py  photo.py  report.py  review.py  toilet.py
backend/app/utils/: auth.py  email.py  geo.py  image.py  storage.py
backend/scripts/: seed_demo.py
docs/: features.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  run.sh  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  (+3 more)
plan/: 2026-05-20-wtfapp-backend-critique.md  2026-05-20-wtfapp-backend-design.md  2026-05-20-wtfapp-frontend-critique-v2.md  2026-05-20-wtfapp-frontend-critique.md  2026-05-20-wtfapp-frontend-design.md  desktop-adaptive-plan.md
tasks/2026-05-21/: 00-guide.md  _progress.json
(+134 files in other folders)
